// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`angular-html.md - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-html
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
\`\`\`

=====================================output=====================================
\`\`\`angular-html
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
\`\`\`

================================================================================
`;

exports[`angular-html.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-html
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
\`\`\`

=====================================output=====================================
\`\`\`angular-html
@if (orderForm.couponCode().disabled()) {
  <div class="info">
    @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
      <p>{{ reason.message }}</p>
    }
  </div>
}
\`\`\`

================================================================================
`;

exports[`angular-html-invalid.md - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-html
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
\`\`\`

=====================================output=====================================
\`\`\`angular-html
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
\`\`\`

================================================================================
`;

exports[`angular-html-invalid.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-html
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
\`\`\`

=====================================output=====================================
\`\`\`angular-html
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
\`\`\`

================================================================================
`;

exports[`angular-ts.md - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-ts
type A ={
        Ugly:string
}

@Component({template: \`
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
  \`
})
export class Order {
}
\`\`\`

=====================================output=====================================
\`\`\`angular-ts
type A ={
        Ugly:string
}

@Component({template: \`
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
  \`
})
export class Order {
}
\`\`\`

================================================================================
`;

exports[`angular-ts.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-ts
type A ={
        Ugly:string
}

@Component({template: \`
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
  \`
})
export class Order {
}
\`\`\`

=====================================output=====================================
\`\`\`angular-ts
type A = {
  Ugly: string;
};

@Component({
  template: \`
    @if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (
          reason of orderForm.couponCode().disabledReasons();
          track reason
        ) {
          <p>{{ reason.message }}</p>
        }
      </div>
    }
  \`,
})
export class Order {}
\`\`\`

================================================================================
`;

exports[`angular-ts-invalid.md - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-ts
        Ugly:string
}

@Component({template: \`
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
  \`
})
export class Order {
}
\`\`\`

=====================================output=====================================
\`\`\`angular-ts
        Ugly:string
}

@Component({template: \`
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
  \`
})
export class Order {
}
\`\`\`

================================================================================
`;

exports[`angular-ts-invalid.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`angular-ts
        Ugly:string
}

@Component({template: \`
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
  \`
})
export class Order {
}
\`\`\`

=====================================output=====================================
\`\`\`angular-ts
        Ugly:string
}

@Component({template: \`
@if (orderForm.couponCode().disabled()) {
      <div class="info">
        @for (reason of orderForm.couponCode().disabledReasons(); track reason) {
<p>{{ reason.message }}</p>
        }</div>
    }
  \`
})
export class Order {
}
\`\`\`

================================================================================
`;
